spacing fix #65

--- a/app/www/css/main.css
+++ b/app/www/css/main.css
@@ -518,8 +518,9 @@ td{
 	margin-top: 0;
 	margin-bottom: 0;
 }
-#qTable td, #qTable th {
-	padding: 5px!important;
+.qTable td, .qTable th {
+	padding-left: 8px!important;
+	padding-right: 8px!important;
 }
 #menubar{
 	font-size: 12px;
